--- a/test/layout/index.hbs
+++ b/test/layout/index.hbs
@@ -2,24 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Element Guide (bootstrap sample)</title>
+  <title>gulp-sceg test</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCore.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shCoreRDark.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/styles/shThemeRDark.css" rel="stylesheet" />
+  <style>
+  .syntaxhighlighter {
+    padding: 10px 0;
+    margin-bottom: 20px !important;
+  }
+  .sceg-preview {
+    border: 1px solid #999;
+    padding: 2em;
+  }
+  .sceg-comment {
+    background: #f1f1f1;
+    display: block;
+    padding: 2em;
+    border-radius: 3px;
+  }
+  .sceg-comment p:last-child {
+    margin-bottom: 0;
+  }
+  </style>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-  <link href="http://alexgorbatchev.com/pub/sh/current/styles/shThemeDefault.css" rel="stylesheet" type="text/css" />
-  <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shCore.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shCore.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/SyntaxHighlighter/3.0.83/scripts/shBrushXml.min.js"></script>
   <script>
   addEventListener('DOMContentLoaded', function() {
-    $('pre *').removeAttr('style');
     SyntaxHighlighter.all();
   });
   </script>
 </head>
 <body>
 
-  <header class="container">
+  <header class="container mt-5">
     <h1>Element Guide (bootstrap sample)</h1>
   </header>
 
@@ -33,19 +53,23 @@
     </nav>
   </div>
 
-  <main class="container">
+  <main class="container mt-5">
     {{#each contents}}
-    <section>
-      <h1><a id="{{category.id}}">{{category.name}}</a></h1>
+    <section class="mb-5">
+      <h1 class="mb-3"><a id="{{category.id}}">{{category.name}}</a></h1>
       {{#each el}}
-        <section>
-          <h2>{{title}}</h2>
-          {{{html}}}
-          <pre class="brush: html;">{{{html}}}</pre>
-          <small>
-            {{{comment}}}
-          </small>
-        </section>
+      <section class="mt-5">
+        <h2 class="mb-3">{{title}}</h2>
+        <h5>Preview</h5>
+        <div class="sceg-preview mb-3">
+        {{{html}}}
+        </div>
+        <h5>Code</h5>
+        <pre class="brush: html;">{{{html}}}</pre>
+        <small class="sceg-comment">
+          {{{comment}}}
+        </small>
+      </section>
       {{/each}}
     </section>
     {{/each}}
